# ozzy

./: .gitignore  404.html  CHANGELOG.md  MANIFEST.in  README.md  backends.py  index.html  mkdocs.yml  objects.inv  ozzy.py  plotting.py  pyproject.toml  rms_grid.py  setup.py  sitemap.xml  statistics.py
.github/workflows/: ci-cd.yml  ci.yml  updater.yml
about/: index.html
about/license/: index.html
about/release-notes/: index.html
dev-guide/: index.html
dev-guide/new-backend-modules/: index.html
docs/: index.md  mkdocs.yml
docs/docs/: index.md
docs/docs/about/: index.md  license.md  release-notes.md
docs/docs/dev-guide/: new-backend-modules.md
docs/docs/reference/: backends.md  core.md  fields.md  index.md  plot.md  statistics.md  utils.md
docs/docs/reference/backends/: index.md  lcode.md  openpmd.md  osiris.md  ozzy.md
docs/docs/reference/backends/submodules/: index.md  lcode.md  osiris.md  ozzy.md
docs/docs/reference/data-objects/: backend-methods.md  data-type-methods.md  general-methods.md  index.md
docs/docs/reference/data-objects/backend-methods/: index.md  lcode.md  openpmd.md  osiris.md  ozzy.md
docs/docs/reference/data-objects/data-type-methods/: grid-data.md  index.md  particle-data.md
docs/docs/release-notes/: index.md
docs/docs/stylesheets/: extra.css
docs/docs/user-guide/: analysis.md  getting-started.md  index.md  key-concepts.md  plotting.md  reading-files.md
docs/docs/user-guide/getting-started/: charge-density.md  histograms.md  index.md  max-along-time.md  phase-space.md  subtract-two-field-components.md
docs/docs/user-guide/installation/: index.md  virtual-environments.md
docs/overrides/: main.html
docs/overrides/partials/integrations/analytics/: umami.html
docs/reference/: backends.md  core.md  ozzy-data-obj.md
docs/reference/data-objects/: backend-methods.md  data-type-methods.md  index.md
docs/user-guide/: see-also.md
javascripts/: feedback.js
ozzy/: accessors.py  backend.py  backends.py  core.py  deact__init__.py  fields.py  grid_mixin.py  lcode_file_key.csv  new_dataobj.py  new_dataset.py  ozzy.py  ozzy_accessor.py  part_mixin.py  plot.py  plotting.py  statistics.py  utils.py
ozzy-refactor/: backend.py  core.py  lcode_backend.py  osiris_backend.py  ozdataset.py  utils.py
ozzy/backends/: lcode_backend.py  lcode_file_key.csv  osiris_backend.py  ozzy_backend.py
ozzy_refactor/: backend.py  core.py  grid_methods.py  lcode_backend.py  osiris_backend.py  ozdataset.py  part_methods.py  plot.py  statistics.py  utils.py
ozzy_refactor/backends/: lcode_backend.py  lcode_file_key.csv  osiris_backend.py  ozzy_backend.py
reference/: index.html
reference/backends/: index.html
reference/backends/lcode/: index.html
reference/backends/openpmd/: index.html
reference/backends/osiris/: index.html
reference/backends/ozzy/: index.html
reference/backends/submodules/: index.html
reference/backends/submodules/lcode/: index.html
reference/backends/submodules/osiris/: index.html
reference/backends/submodules/ozzy/: index.html
reference/core/: index.html
reference/data-objects/: index.html
reference/data-objects/backend-methods/: index.html
reference/data-objects/backend-methods/lcode/: index.html
reference/data-objects/backend-methods/openpmd/: index.html
reference/data-objects/backend-methods/osiris/: index.html
reference/data-objects/backend-methods/ozzy/: index.html
reference/data-objects/data-type-methods/: index.html
reference/data-objects/data-type-methods/grid-data/: index.html
reference/data-objects/data-type-methods/particle-data/: index.html
reference/data-objects/general-methods/: index.html
reference/fields/: index.html
reference/plot/: index.html
reference/statistics/: index.html
reference/utils/: index.html
release-notes/: index.html
search/: search_index.json
src/ozzy/: __init__.py  accessors.py  backend.py  backend_interface.py  core.py  fields.py  grid_mixin.py  new_dataobj.py  part_mixin.py  plot.py  statistics.py  tol_colors.py  utils.py
src/ozzy/backends/: lcode_backend.py  lcode_file_key.csv  openpmd_backend.py  osiris_backend.py  ozzy_backend.py  template_backend.py
src/ozzy/physunits/: __init__.py  unit_defs.txt  units.py
stylesheets/: extra.css
templates/: .changelog_header.md.j2  .changelog_update.md.j2  .changes.md.j2  .versioned_changes.md.j2
testing/: testing_vphi.ipynb
tests/: class.py  class2.py  class_structure.py  debug.py  debug2.py  debug_vphi_xcorr.py  functools_wraps.py  open_compare_lineouts.py  test_accessors.py  test_backend_interface.py  test_core.py  test_grid_mixin.py  test_lcode_backend.py  test_new_dataobj.py  test_openpmd_backend.py  test_osiris_backend.py  test_ozzy_backend.py  test_part_mixin.py  test_plot.py  test_utils.py  test_vphi.ipynb  test_vphi.py  test_vphi2.ipynb  test_vphi_fft_basic.ipynb  xarray_subclass.py
user-guide/: index.html
user-guide/analysis/: index.html
user-guide/getting-started/: index.html
user-guide/getting-started/charge-density/: index.html
user-guide/getting-started/phase-space/: index.html
user-guide/getting-started/subtract-two-field-components/: index.html
user-guide/installation/: index.html
user-guide/installation/virtual-environments/: index.html
user-guide/key-concepts/: index.html
user-guide/plotting/: index.html
user-guide/reading-files/: index.html
user-guide/see-also/: index.html
user-guide/speed/: index.html
