[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ozzy"
version = "0.0.0a"
dependencies = [
  "xarray==2024.3.0",
  "tqdm==4.66.2",
  "numpy==1.26.4",
  "xarray==2024.3.0",
  "h5py==3.10.0",
  "h5netcdf==1.3.0",
  "flox==0.9.6",
  "dask==2024.4.1",
  "dask-expr==1.0.10",
  "matplotlib==3.8.3",
  "cmcrameri==1.9",
  "pandas==2.2.1",
  "seaborn==0.13.2",
]
requires-python = ">=3.10"
authors = [
  {name = "Mariana Moreira", email = "mtrocadomoreira@gmail.com"},
]
maintainers = [
  {name = "Mariana Moreira", email = "mtrocadomoreira@gmail.com"},
]
description = "PIC simulation data analysis for the lazy and impatient"
readme = "README.md"
license = {file = "LICENSE"}
keywords = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "License :: OSI Approved :: MIT License",
  "Framework :: Hypothesis",
  "Framework :: Pytest",
  "Framework :: IPython",
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Matplotlib",
  "Framework :: MkDocs",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft",
  "Operating System :: Unix",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Visualization",
# Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]

[project.optional-dependencies]
optimize = ["numpy_groupies==0.10.2", "numbagg==0.8.1"]
# TODO: add optional dependencies for building the documentation (mkdocs etc)


[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/mtrocadomoreira/ozzy.git"